--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="ui input" id="submit">
                 <input type="text" placeholder="Submit a comment...">
-                <button class="ui primary button" onsubmit="submitComment()">
+                <button class="ui primary button" onclick="submitComment()">
                     Submit
                 </button>
             </div>
