Fixed more bugs

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     </head>
     <body>
         <div id="bg">
-            <h1 class="header">
+            <h1 class="ui header" class="header">
                 Our Website!
             </h1>
-            <h2 class="subheader">
+            <h2 class="ui header" class="subheader">
                 Comments...
             </h2>
             <div class="comments">
                 Loading comments... Please wait...
             </div>
-            <div class="ui input" id="submit">
-                <input type="text" placeholder="Submit a comment...">
+            <div class="ui input">
+                <input type="text" placeholder="Submit a comment..." id="submit">
                 <button class="ui primary button" onclick="submitComment()">
                     Submit
                 </button>
