--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
     </head>
     <body>
         <div id="bg">
-            <h1 class="ui header" class="header">
+            <h1 class="ui header">
                 Our Website!
             </h1>
-            <h2 class="ui header" class="subheader">
+            <h2 class="ui header">
                 Comments...
             </h2>
-            <div class="comments">
-                Loading comments... Please wait...
+            <div id="comments">
+                <div class="ui segment"> 
+                    <p>Loading comments... Please wait...</p>
+                </div>
             </div>
             <div class="ui input">
                 <input type="text" placeholder="Submit a comment..." id="submit">
