Add name and email textboxes

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
                 </div>
             </div>
             <div class="ui input">
+                <input type="text" placeholder="Name" id="name">
+                <input type="email" placeholder="Email" id="email">
                 <input type="text" placeholder="Submit a comment..." id="submit">
                 <button class="ui primary button" onclick="submitComment()">
                     Submit
