--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head ng-app="requestApp">
         <meta charset="UTF-8">
         <title>Sample Website for JAN</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.css">
         <link rel="stylesheet" href="./style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
         <script src="./request.js"></script>
     </head>
     <body>
-        <div id="bg">
+        <div id="bg" ng-controller="requestController as request">
             <h1 class="ui header">
                 Our Website!
             </h1>
@@ -18,19 +19,28 @@
                 Comments...
             </h2>
             <div class="ui input">
-                <input type="text" placeholder="Name" id="name">
-                <input type="email" placeholder="Email" id="email">
-                <input type="text" placeholder="Submit a comment..." id="submit">
-                <button class="ui primary button" onclick="submitComment()">
+                <input type="text" placeholder="Name" ng-model="request.name">
+                <input type="email" placeholder="Email" ng-model="request.email">
+                <input type="text" placeholder="Submit a comment..." ng-model="request.submit">
+                <button class="ui primary button" ng-click="request.submitComment()">
                     Submit
                 </button>
             </div>
-            <div id="comments">
-                <div class="ui segment"> 
-                    <p>Loading comments... Please wait...</p>
+            <div class="ui segment" {{request.loaded}}> 
+                <p>Loading comments... Please wait...</p>
+            </div>
+            <div class="ui error message" {{request.failure}}>
+                <h4 class="ui header">
+                    There was an error connecting to the PHP server.
+                </h4>
+                <p>Contact a Network Adminstrator if this problem persists.</p>
+            </div>
+            <div ng-repeat="data in request.comments">
+                <div class="ui raised segment">
+                    <h4 class="ui header"> Posted by: {{data.url}}</h4>
+                    <p>{{data.comment}}</p>
                 </div>
             </div>
-
         </div>
     </body>
 </html>
