--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-    <head ng-app="requestApp">
+<html ng-app="requestApp">
+    <head>
         <meta charset="UTF-8">
         <title>Sample Website for JAN</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.css">
